# discovery

./: README.md
.auto-registry/: agent-registry.json  starter-kit-registry.json
.github/: CODEOWNERS
.github/scripts/: validate_pr.py
.github/skills/: README.md
.github/workflows/: auto-approve-registry-prs.yml  auto-merge-on-approval.yml  check-agent-removal-impact.yml  pr-review.yml  unit-tests.yml  update-registry.yml  update-starter-kits-registry.yml  validate-agent-schemas.yml  validate-everything.yml  validate-starter-kit-schema.yml  validate-starter-kits.yml
agents/aizynthfinder/: agent.yaml
archive/: README.md
archive/6-solutions/common-infra/ANF-S3-MCP/server-s3mcp/: .gitignore  Dockerfile  LICENSE  MCP_SETUP.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
archive/6-solutions/common-infra/ANF-S3-MCP/server-s3mcp/config/: .env.example  mcp.json
archive/6-solutions/common-infra/ANF-S3-MCP/server-s3mcp/scripts/: start_server.py  test_server.py
archive/6-solutions/common-infra/ANF-S3-MCP/server-s3mcp/src/: __init__.py  s3_mcp.py
archive/utils/supercomputer-cli/discovery/: .gitignore  README.md  pyproject.toml
archive/utils/supercomputer-cli/discovery/src/discovery/: __init__.py  _version.py
archive/utils/supercomputer-cli/discovery/src/discovery/common/: __init__.py  config.py  logging.py  paths.py
archive/utils/supercomputer-cli/discovery/src/discovery/poll/: __init__.py  api.py  az_extensions.py  azcli.py  build_acr_task.py  cli.py  cli_build.py  cli_cleanup.py  cli_configure.py  cli_doctor.py  cli_helpers.py  cli_smoke.py  cli_status.py  cli_storage.py  cli_submit.py  dataplane_api.py  deploy_dataasset.py  deploy_datacontainer.py  deploy_storageasset.py  deploy_storagecontainer.py  deploy_tooldef.py  resources.py  selection.py  vscode_layer.py
archive/utils/supercomputer-cli/discovery/src/discovery/poll/models/: __init__.py  api_version.py  auth.py  compute.py  config.py  dataasset.py  tool_response.py  tool_run.py
archive/utils/supercomputer-cli/discovery/src/discovery/poll/templates/: README.md  tool-run-gpu.json  tool-run.json
archive/utils/supercomputer-cli/discovery/src/discovery/poll/templates/dataasset/: parameters.json  template.json
archive/utils/supercomputer-cli/discovery/src/discovery/poll/templates/datacontainer/: parameters.json  parameters_blob.json  template.json  template_blob.json
archive/utils/supercomputer-cli/discovery/src/discovery/poll/templates/storageasset/: parameters.json  template.json
archive/utils/supercomputer-cli/discovery/src/discovery/poll/templates/storagecontainer/: parameters.json  parameters_blob.json  template.json  template_blob.json
archive/utils/supercomputer-cli/discovery/src/discovery/poll/templates/tooldef/: arm_template.json  parameters.json  template.json
archive/utils/supercomputer-cli/discovery/src/discovery/poll/templates/tooldef/test/: parameters.json
archive/utils/supercomputer-cli/discovery/tests/: conftest.py  test_az_extensions.py  test_build_acr_task.py  test_cli_cleanup.py  test_cli_commands.py  test_cli_helpers.py  test_cli_status.py  test_cli_storage.py  test_common_config.py  test_deploy_dataasset.py  test_deploy_datacontainer.py  test_deploy_storageasset.py  test_deploy_storagecontainer.py  test_deploy_tooldef.py  test_doctor.py  test_models.py  test_paths.py  test_poll_module.py  test_resources.py  test_resources_helpers.py  test_scratch_mount.py  test_selection.py  test_version.py  test_vscode_layer.py
starter-kits/: README.md
utilities/: README.md
(+742 files in other folders)
