[project]
name = "discovery"
version = "0.1.0"
description = "Discovery CLI for Supercomputer data plane"
readme = "README.md"
authors = [
    { name = "Discovery", email = "devnull@example.com" }
]
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
  "pydantic",
  "pydantic-settings",
  "python-dotenv",
  "tenacity",
  "typer",
  "rich",
  "httpx"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "mypy", "ruff", "pytest-asyncio"]

[project.scripts]
discovery = "discovery.poll.cli:app"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "C4",  # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "T10", # flake8-debugger
  "EM",  # flake8-errmsg
  "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  "PIE", # flake8-pie
  "PT",  # flake8-pytest-style
  "Q",   # flake8-quotes
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "ARG", # flake8-unused-arguments
  "PL",  # pylint
  "RUF", # ruff-specific rules
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "PLR0913", # too many arguments
  "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "ARG",  # unused arguments common in fixtures
  "PLR",  # pylint refactor rules less strict in tests
]

[tool.ruff.lint.isort]
known-first-party = ["discovery"]
force-single-line = false
lines-after-imports = 2

[tool.pytest.ini_options]
addopts = "-q --cov=discovery --cov-report=term-missing --cov-fail-under=80"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.9"
strict = false
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
